test/classes/initializers/dflt-ctor-generic-uninit-field-var-err-1.chpl
// Modified from
// test/classes/constructors/dflt-ctor-generic-uninit-field-var-err-1.chpl
class A {
  var v;
}

var x = new A();
